--- a/src/main/resources/docker-compose.yml
+++ b/src/main/resources/docker-compose.yml
@@ -47,6 +47,23 @@ services:
     networks:
       - kafka-network
 
+  redis:
+    image: redis:7.2
+    container_name: redis
+    ports:
+      - "6379:6379"
+    command: >
+      redis-server
+      --requirepass redis123
+      --appendonly yes
+    volumes:
+      - redis_data:/data
+    networks:
+      - kafka-network
+
+volumes:
+  redis_data:
+
 networks:
   kafka-network:
     driver: bridge
